--- a/MatrixTool/MatrixTool.vcxproj.filters
+++ b/MatrixTool/MatrixTool.vcxproj.filters
@@ -24,12 +24,18 @@
     <ClCompile Include="Complex.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="FFT.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Matrix.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Complex.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="FFT.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
